[package]
name = "constime"
authors = ["David Cruz <davidccodes@gmail.com>"]
description = "Zig's comptime for Rust with zero dependencies. Mostly something to play around with until more stuff is const fn."
version = "0.2.1"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true
doctest = false

[build-dependencies]
ureq = "2.6.1"
