[package]
name = "constime"
description = "Zig's comptime for Rust with zero dependencies. Mostly something to play around with until more stuff is const fn."
version = "0.3.0"

authors = ["David Cruz <david@codebycruz.com>"]
repository = "https://github.com/DvvCz/Constime"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true
doctest = false

[dev-dependencies]
ureq = "2.12.1"